added the updated maps + fixed a bug or 2

--- a/node_test_v1/views/lecturerModuleeditor.ejs
+++ b/node_test_v1/views/lecturerModuleeditor.ejs
@@ -40,7 +40,7 @@
       <!-- Logo -->
       <div class="flex items-center">
         <div class="logo">
-            <span class="font-bold text-4xl text-white"><a href="/student/course/<%= courseId %>">MIP</a></span>
+            <span class="font-bold text-4xl text-white"><a href="/lecturer/course/<%= courseId %>">MIP</a></span>
         </div>
       </div>
 
