--- a/node_test_v1/views/studentCourse.ejs
+++ b/node_test_v1/views/studentCourse.ejs
@@ -96,9 +96,9 @@
         <h1 class="landing-title">MIP, The GIST.</h1>
         <p class="landing-subtitle">Explore the Indo-Pacific and get ready to test your understanding!</p>
         <div class="landing-actions">
-          <button href="/student/module/1/7" class="landing-btn outline">World Map</button>
-          <!-- <a href="/student/module/1/7" class="landing-btn solid">Indo-Pacific Map</a> -->
-          <a class="landing-btn solid">Indo-Pacific Map</a>
+          <!-- <button href="/student/module/1/7" class="landing-btn outline">World Map</button> -->
+          <a href="/student/module/1/7" class="landing-btn solid">Indo-Pacific Map</a>
+          <!-- <a class="landing-btn solid">Indo-Pacific Map</a> -->
         </div>
       </div>
       <div class="scroll-indicator" aria-hidden="true">
